--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,22 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_detail"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ca.cambrian.android.project.aaa.project.Detail">
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="133dp"
-        android:layout_marginTop="57dp"
-        android:id="@+id/textView" />
-</RelativeLayout>
+
+
+
+
+
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/activity_detail"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="ca.cambrian.android.project.aaa.project.Detail">
+
+
+        <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="61dp"
+            android:layout_height="60dp"
+            app:srcCompat="@drawable/ic_action_name"
+            android:layout_marginLeft="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="16dp" />
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="260dp"
+            android:layout_height="22dp"
+            android:text="TextView"
+            app:layout_constraintLeft_toRightOf="@+id/imageView8"
+            android:layout_marginLeft="15dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="16dp" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="289dp"
+            android:layout_height="26dp"
+            android:text="TextView"
+            app:layout_constraintLeft_toRightOf="@+id/imageView8"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="3dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+        <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="345dp"
+            android:layout_height="232dp"
+            app:srcCompat="@drawable/toronto"
+            android:layout_marginLeft="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="343dp"
+            android:layout_height="124dp"
+            android:text="TextView"
+            android:layout_marginTop="7dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView9"
+            android:layout_marginLeft="20dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="149dp"
+            android:layout_height="37dp"
+            android:text="Button"
+            android:layout_marginTop="11dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView10"
+            android:layout_marginLeft="208dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
+    </android.support.constraint.ConstraintLayout>
+</ScrollView>
